Colocando imagens de produtos

--- a/Lustrious/Views/Home/Index.cshtml
+++ b/Lustrious/Views/Home/Index.cshtml
@@ -22,11 +22,11 @@
         </div>
 
         <div class="carousel-item">
-            <img src="imagens/Carrossel/imagens_carrossel_2.png" class="d-block w-100" alt="Imagem 2">
+            <img src="imagens/Carrossel/imagens_carrossel_3.png" class="d-block w-100" alt="Imagem 2">
         </div>
 
         <div class="carousel-item">
-            <img src="imagens/Carrossel/imagens_carrossel_3.png" class="d-block w-100" alt="Imagem 3">
+            <img src="imagens/Carrossel/imagens_carrossel_2.png" class="d-block w-100" alt="Imagem 3">
         </div>
     </div>
 
@@ -59,9 +59,9 @@
 
 <div class="box-destaque">
     <!-- COLOQUE SUAS IMAGENS DE PRODUTOS DESTACADOS AQUI -->
-    <img src="../Imagens/P1.png" />
-    <img src="../Imagens/P2.png" />
-    <img src="../Imagens/P3.png" />
+    <img src="../wwwroot/imagens/Pele/imagem_pele_hidratante_1.png" />
+    <img src="../wwwroot/imagens/Corpo/imagem_corpo_bory_1.png" />
+    <img src="../wwwroot/imagens/Maquiagem/imagem_rosto_bruma_1.png" />
 </div>
 
 <!-- PRODUTOS -->
