--- a/Lustrious/Views/Shared/_Layout.cshtml
+++ b/Lustrious/Views/Shared/_Layout.cshtml
@@ -89,7 +89,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy;2025 - Lustrious - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy;2025 - Lustrious
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
