--- a/Lustrious/Views/Venda/ListarTodas.cshtml
+++ b/Lustrious/Views/Venda/ListarTodas.cshtml
@@ -1,19 +1,14 @@
 @model IEnumerable<Lustrious.Models.Venda>
 @{
- ViewData["Title"] = "Minhas Vendas";
+ ViewData["Title"] = "Todas Vendas";
 }
-<h2>Meus Pedidos</h2>
-@if (!Model?.Any() ?? true)
-{
- <p>Você não possui pedidos.</p>
-}
-else
-{
- <table class="table">
+<h2>Todas Vendas</h2>
+<table class="table">
  <thead>
  <tr>
  <th>Id</th>
  <th>Data</th>
+ <th>Usuário</th>
  <th>Valor</th>
  <th>NF</th>
  <th>Entrega</th>
@@ -25,12 +20,11 @@ else
  <tr>
  <td>@v.IdVenda</td>
  <td>@v.DataVenda</td>
+ <td>@v.IdUser</td>
  <td>@v.ValorTotal.ToString("C")</td>
  <td>@v.NF</td>
  <td>@v.IdEntrega</td>
  </tr>
  }
  </tbody>
- </table>
-}
-<p><a asp-action="ListarTodas">Ver todas vendas (admin)</a></p>
+</table>
