Criando e atualizando o metodo criarContaCliente

--- a/Lustrious/Views/Auth/Login.cshtml
+++ b/Lustrious/Views/Auth/Login.cshtml
@@ -17,7 +17,7 @@
         <button type="submit">ENTRAR</button>
 
         <!-- 🔹 NOVO BOTÃO CRIAR CONTA -->
-        <a asp-controller="Cliente" asp-action="CriarCliente" class="btn-criar">CRIAR CONTA</a>
+        <a asp-controller="Cliente" asp-action="CriarContaCliente" class="btn-criar">CRIAR CONTA</a>
 
     </form>
 </div>
