--- a/Lustrious/Views/Cliente/Index.cshtml
+++ b/Lustrious/Views/Cliente/Index.cshtml
@@ -38,10 +38,10 @@
                     <th>FOTO</th>
                     <th>NOME</th>
                     <th>EMAIL</th>
-                    <th>Sexo</th>
+                    <th>SEXO</th>
                     <th>CPF</th>
                     <th>ATIVO</th>
-                    <th>Ações</th>
+                    <th>AÇÕES</th>
                 </tr>
             </thead>
 
